[PRIMA-12267]: [Pyxis Scss] Implement checkbox (#39)

--- a/packages/pyxis-scss/src/scss/components/forms/controls/control.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/controls/control.scss
@@ -1,3 +1,8 @@
+////
+/// Generated classes for control field styling.
+/// @group COMPONENTS
+////
+
 @use "../../../foundations";
 @use "../../../lib";
 @use "../mixins";
@@ -37,7 +42,57 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
 ///      </label>
 ///    </div>
 ///
-/// @example scss - Grouped radio - Vertical layout
+/// @example scss - Checkbox
+///    <div class="form-control-group">
+///      <label class="form-control">
+///        <input type="checkbox" name="ex4" class="form-control__checkbox" />
+///        Checkbox
+///      </label>
+///      <label class="form-control">
+///        <input type="checkbox" name="ex4" class="form-control__checkbox" checked />
+///        Checkbox
+///      </label>
+///      <label class="form-control">
+///        <input type="checkbox" name="ex4" class="form-control__checkbox" indeterminate />
+///        Checkbox
+///      </label>
+///    </div>
+///
+/// @example scss - Checkbox with error
+///    <div class="form-control-group form-control--error">
+///      <label class="form-control">
+///        <input type="checkbox" name="ex4" class="form-control__checkbox" />
+///        Checkbox
+///      </label>
+///      <label class="form-control">
+///        <input type="checkbox" name="ex4" class="form-control__checkbox" checked />
+///        Checkbox
+///      </label>
+///      <label class="form-control">
+///        <input type="checkbox" name="ex4" class="form-control__checkbox" indeterminate />
+///        Checkbox
+///      </label>
+///      <div class="form-control-group__error-message">Error message</div>
+///    </div>
+///
+/// @example scss - Disabled checkbox
+///    <div class="form-control-group">
+///      // Please note that adding `form-control--disabled` is mandatory for a correct interaction.
+///      <label class="form-control form-control--disabled">
+///        <input type="checkbox" name="ex4" class="form-control__checkbox" disabled/>
+///        Checkbox
+///      </label>
+///      <label class="form-control form-control--disabled">
+///        <input type="checkbox" name="ex4" class="form-control__checkbox" checked disabled />
+///        Checkbox
+///      </label>
+///      <label class="form-control form-control--disabled">
+///        <input type="checkbox" name="ex4" class="form-control__checkbox" indeterminate disabled />
+///        Checkbox
+///      </label>
+///    </div>
+///
+/// @example scss - Vertical layout
 ///    <div class="form-control-group form-control-group--column">
 ///      <label class="form-control">
 ///        <input type="radio" name="ex4" class="form-control__radio" />
@@ -63,6 +118,7 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
 }
 
 .form-control--disabled {
+  color: foundations.color(neutral50);
   cursor: not-allowed;
 }
 
