--- a/packages/pyxis-scss/src/scss/components/forms/controls/radio.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/controls/radio.scss
@@ -24,6 +24,7 @@
 
   &:disabled:checked,
   &[disabled]:checked {
+    background-color: foundations.color(neutral75);
     @include _boxShadow(neutral95);
   }
 }
