--- a/packages/pyxis-scss/src/scss/foundations/base/form.scss
+++ b/packages/pyxis-scss/src/scss/foundations/base/form.scss
@@ -13,7 +13,7 @@ fieldset {
   margin: 0;
   padding: 0;
 
-  &:not([type="radio"]):focus {
+  &:not([type="radio"], [type="checkbox"]):focus {
     outline: none;
   }
 }
