--- a/packages/pyxis-scss/src/scss/components/forms/variables.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/variables.scss
@@ -4,3 +4,4 @@ $borderWidth: lib.rem(2px);
 $controlSize: lib.rem(20px);
 $fieldHeight: lib.rem(46px);
 $fieldHeightSmall: lib.rem(31px);
+$outlineWidth: lib.rem(3px);
