--- a/packages/pyxis-scss/src/scss/components/forms/fields/field.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/fields/field.scss
@@ -128,6 +128,10 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
   width: 100%;
 }
 
+.form-field--with-dropdown {
+  cursor: pointer;
+}
+
 .form-field--disabled {
   @include mixins.fieldStateDisable;
 }
@@ -136,21 +140,23 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
   @include mixins.fieldStateError;
 }
 
+.form-field--with-opened-dropdown {
+  @include mixins.fieldWithOpenedDropdown;
+}
+
 .form-field__wrapper {
+  cursor: inherit;
   display: flex;
   height: 100%;
-
-  .form-field--disabled & {
-    pointer-events: none;
-  }
 }
 
 .form-field__addon {
   color: foundations.color(neutral25);
   display: grid;
-  min-width: variables.$fieldHeight - variables.$borderWidth * 2;
+  min-width: variables.$fieldHeight;
   place-items: center;
   pointer-events: none;
+  transition: transform $_transitionTiming;
   user-select: none;
 
   .form-field--with-leading-text &,
@@ -168,8 +174,12 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
     border-left: lib.rem(1px) solid foundations.color(neutral85);
   }
 
+  .form-field--with-opened-dropdown & {
+    transform: rotate(180deg);
+  }
+
   .form-field--small & {
-    min-width: variables.$fieldHeightSmall - variables.$borderWidth * 2;
+    min-width: variables.$fieldHeightSmall;
   }
 
   .form-field:focus-within &,
