--- a/packages/pyxis-scss/src/scss/components/forms/fields/select.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/fields/select.scss
@@ -6,7 +6,7 @@
 @use "../../../foundations";
 @use "../variables";
 
-/// Set general properties for select field.
+/// Set general properties for styling select.
 ///
 /// @example scss - Native select field
 ///    <div class="form-field">
