--- a/packages/pyxis-scss/src/scss/components/forms/fields/text.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/fields/text.scss
@@ -1,7 +1,25 @@
+////
+/// Generated classes for text field styling.
+/// @group COMPONENTS
+////
+
 @use "../../../foundations";
 @use "../../../lib";
 @use "../variables";
 
+/// Set properties for styling input of type text.
+///
+/// @example scss - Default input field
+///    <div class="form-field">
+///      <input type="text" class="form-field__text" placeholder="Text field"/>
+///    </div>
+///
+/// @example scss - Small input
+///    <div class="form-field">
+///      <input type="text" class="form-field__text form-field__text--small" placeholder="Text field"/>
+///    </div>
+///
+/// @access public
 .form-field__text {
   @include foundations.horizontalPadding(s);
   height: variables.$fieldHeight;
