--- a/packages/pyxis-scss/src/scss/components/buttons.scss
+++ b/packages/pyxis-scss/src/scss/components/buttons.scss
@@ -8,6 +8,7 @@
 
 $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
 $_borderWidth: lib.rem(2px);
+$_outlineWidth: lib.rem(3px);
 
 /// Sizes of Pyxis' buttons.
 /// Each size has direct influence on properties in the sub-maps.
@@ -137,7 +138,7 @@ $_sizes: (
 /// @param {Color} $borderColor - Name of the color used as border
 ///
 /// @access private
-@mixin _outlined ($borderColor) {
+@mixin _outlined ($borderColor, $borderColorAlt) {
   border: $_borderWidth solid $borderColor;
   color: foundations.color(actionBase);
 
@@ -157,11 +158,12 @@ $_sizes: (
   }
 
   &.button--alt {
-    border-color: foundations.color(neutralLight);
+    border-color: $borderColorAlt;
     color: foundations.color(neutralLight);
 
     &:hover {
       background-color: rgba(foundations.color(neutralLight), 0.15);
+      border-color: foundations.color(neutralLight);
       box-shadow: none;
     }
 
@@ -193,11 +195,33 @@ $_sizes: (
   will-change: transform;
 
   &:focus {
-    outline: rgba(foundations.color(actionBase), 0.2) solid lib.rem(3px);
+    outline: rgba(foundations.color(actionBase), 0.2) solid $_outlineWidth;
     outline-offset: $_borderWidth;
+
+    @include lib.onSafari {
+      outline: none;
+
+      &:before {
+        $offset: -#{$_outlineWidth + $_borderWidth};
+
+        border: $_outlineWidth solid rgba(foundations.color(actionBase), 0.2);
+        bottom: $offset;
+        content: "";
+        left: $offset;
+        position: absolute;
+        right: $offset;
+        top: $offset;
+      }
+    }
 
     &.button--alt {
       outline-color: rgba(foundations.color(neutralLight), 0.2);
+
+      @include lib.onSafari {
+        &:before {
+          border-color: rgba(foundations.color(neutralLight), 0.2);
+        }
+      }
     }
   }
 
@@ -225,17 +249,21 @@ $_sizes: (
     @include foundations.text(lib.get($properties, textSize), bold);
     height: $dimension;
 
+    &:before,
     &:not(.button--ghost) {
       @include foundations.radius(lib.get($properties, radius));
+    }
+
+    &:not(.button--ghost) {
       min-width: lib.get($properties, minWidth);
       padding: 0 foundations.spacing($padding);
     }
 
-    &.button--trailing-icon {
+    &.button--append-icon {
       padding-right: $iconSpacing;
     }
 
-    &.button--leading-icon {
+    &.button--prepend-icon {
       padding-left: $iconSpacing;
     }
 
@@ -257,7 +285,7 @@ $_sizes: (
 ///
 /// @access private
 .button--primary {
-  $_endGradient: lighten( adjust-hue(foundations.color(actionDark), -4deg ), 16 );
+  $_endGradient: lighten(adjust-hue(foundations.color(actionDark), -4deg ), 16);
   @include _filled(linear-gradient(45deg, foundations.color(actionBase) 50%, $_endGradient), action40);
 }
 
@@ -266,11 +294,11 @@ $_sizes: (
 }
 
 .button--secondary {
-  @include _outlined(foundations.color(actionBase));
+  @include _outlined(foundations.color(actionBase), foundations.color(neutralLight));
 }
 
 .button--tertiary {
-  @include _outlined(foundations.color(neutral85));
+  @include _outlined(foundations.color(neutral85), rgba(foundations.color(neutralLight), 0.4));
 }
 
 .button--ghost {
@@ -282,12 +310,13 @@ $_sizes: (
     border-bottom-color: foundations.color(actionBase);
   }
 
-  &:focus {
+  &:focus,
+  &:before {
     border-radius: lib.rem(1px);
   }
 
-  &.button--trailing-icon,
-  &.button--leading-icon {
+  &.button--prepend-icon,
+  &.button--append-icon {
     padding-left: 0;
     padding-right: 0;
   }
