[PRIMA-12270]: [Pyxis Scss] Checkbox card implementation (#46)

--- a/packages/pyxis-react/src/stories/components/Form/Form.scss
+++ b/packages/pyxis-react/src/stories/components/Form/Form.scss
@@ -10,6 +10,11 @@
   grid-template-rows: repeat(2, 1fr);
 }
 
+.wrapper--card {
+  grid-template-columns: 100%;
+  max-width: 900px;
+}
+
 .form-item {
   @include pyxis.rowGap(2xs);
   display: grid;
