--- a/packages/pyxis-react/src/stories/pyxis.scss
+++ b/packages/pyxis-react/src/stories/pyxis.scss
@@ -1,2 +1,12 @@
 @forward "~@pyxis/scss/src/scss/pyxis.scss";
 @forward "~@pyxis/scss/src/scss/components";
+
+@use "~@pyxis/scss/src/scss/pyxis.scss";
+
+.form-item {
+  @include pyxis.rowGap(2xs);
+  display: grid;
+  grid-template-rows: auto;
+  max-width: 720px;
+  width: 100%;
+}
