--- a/packages/pyxis-scss/src/scss/components/forms/card.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/card.scss
@@ -136,6 +136,7 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
     border-color $_transitionTiming,
     box-shadow $_transitionTiming,
     outline-color $_transitionTiming;
+  width: 100%;
   will-change: border-color, box-shadow, outline-color;
 
   &:active:not( &--disabled ) {
