--- a/packages/pyxis-scss/src/scss/components/forms/controls/control.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/controls/control.scss
@@ -78,6 +78,7 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
   grid-auto-flow: column;
   justify-content: start;
   position: relative;
+  width: 100%;
 }
 
 .form-control-group--column {
