[PRIMA-12296]: Broken grid on storybook (#58)

--- a/packages/pyxis-react/src/stories/components/Badge/Badge.scss
+++ b/packages/pyxis-react/src/stories/components/Badge/Badge.scss
@@ -1,6 +1,6 @@
 @use "src/stories/pyxis";
 
-.wrapper {
+.badge-wrapper {
   @include pyxis.padding(s);
   @include pyxis.columnGap(s);
   display: grid;
