--- a/packages/pyxis-scss/src/scss/components/forms/card.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/card.scss
@@ -111,9 +111,9 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
 /// @example scss - Card large (with image)
 ///    <div class="form-card-group">
 ///      <label className="form-card form-card--large">
-//          <span className="form-card__addon">
-//            <img width="70" height="70" />
-//          </span>
+///          <span className="form-card__addon">
+///            <img width="70" height="70" />
+///          </span>
 ///        <span class="form-card__content-wrapper">
 ///          <span class="form-card__title">Title card</span>
 ///          <span class="form-card__text">Text description</span>
